--- a/styles.css
+++ b/styles.css
@@ -329,6 +329,8 @@ nav {
 .about-product-text {
     flex: 1;
     min-width: 300px;
+    max-width: 500px;
+    margin-right: 30px;
 }
 .about-product-text h2 {
     font-size: 2.2rem;
@@ -341,7 +343,7 @@ nav {
     line-height: 1.7;
 }
 .about-product-video {
-    flex: 1;
+    flex: 1.5;
     min-width: 320px;
     display: flex;
     justify-content: center;
